--- a/id=1945432.html
+++ b/id=1945432.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>questter・Twitterで質問カンタンにが送れるサービス</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet2.css">
+</head>
+
 <div class="header">
-<title>questter<title>
+<h1>questter<h2>
 <h3>Twitterで質問カンタンにが送れるサービス<h3>
 </div>
