--- a/api.twitter.html
+++ b/api.twitter.html
@@ -40,7 +40,7 @@
 
 
     <div class="auth">
-      <h2>Kuizyにアカウントへのアクセスを許可しますか？</h2>
+      <h2>Quitterにアカウントへのアクセスを許可しますか？</h2>
 
       <div class="app-info" role="content-info" tabindex="0">
   <h3>
@@ -51,7 +51,7 @@
       <dt class="url">アプリケーションのURL</dt>
       <dd class="url">kuizy.net</dd>
       <dt class="notes">このアプリケーションについて</dt>
-      <dd class="notes"><p>Kuizy - 日本最大級のクイズメディア｜無料で簡単にクイズ・診断・検定が投稿できるサイト</p></dd>
+      <dd class="notes"><p>Quitter - Twitterで質問カンタンにが送れるサービス</p></dd>
       <dt class="terms">プライバシーポリシー</dt>
       <dd class="terms"><p><a href="https://kuizy.net/policy/pvy">プライバシーポリシー</a></p></dd>
       <dt class="terms">利用規約</dt>
@@ -88,7 +88,7 @@
 
 
         <fieldset class="buttons">
-          <legend>Kuizyにアカウントへのアクセスを許可しますか？</legend>
+          <legend>Quitterにアカウントへのアクセスを許可しますか？</legend>
           <input type="submit" value="連携アプリを認証" class="submit button selected" id="allow">
 
             <input class="submit button" id="cancel" name="cancel" type="submit" value="キャンセル">
