--- a/api.twitter.html
+++ b/api.twitter.html
@@ -49,7 +49,7 @@
   </h3>
   <dl>
       <dt class="url">アプリケーションのURL</dt>
-      <dd class="url">kuizy.net</dd>
+      <dd class="url">quester.jp</dd>
       <dt class="notes">このアプリケーションについて</dt>
       <dd class="notes"><p>Quitter - Twitterで質問カンタンにが送れるサービス</p></dd>
       <dt class="terms">プライバシーポリシー</dt>
