--- a/api.twitter.html
+++ b/api.twitter.html
@@ -40,11 +40,11 @@
 
 
     <div class="auth">
-      <h2>Quitterにアカウントへのアクセスを許可しますか？</h2>
+      <h2>Questterにアカウントへのアクセスを許可しますか？</h2>
 
       <div class="app-info" role="content-info" tabindex="0">
   <h3>
-    <img alt="" class="app-icon" src="https://pbs.twimg.com/app_img/1435740431690571776/1pgO5hR9?format=png&amp;name=73x73" title="Kuizy">
+    <img alt="" class="app-icon" src="https://pbs.twimg.com/app_img/1435740431690571776/1pgO5hR9?format=png&amp;name=73x73" title="Questter">
     Kuizy
   </h3>
   <dl>
