--- a/api.twitter.html
+++ b/api.twitter.html
@@ -44,8 +44,8 @@
 
       <div class="app-info" role="content-info" tabindex="0">
   <h3>
-    <img alt="" class="app-icon" src="https://pbs.twimg.com/app_img/1435740431690571776/1pgO5hR9?format=png&amp;name=73x73" title="Questter">
-    Kuizy
+    <img src="q-character-alphabet-letter-32868.png" alt="">
+    
   </h3>
   <dl>
       <dt class="url">アプリケーションのURL</dt>
