--- a/api.twitter.html
+++ b/api.twitter.html
@@ -51,7 +51,7 @@
       <dt class="url">アプリケーションのURL</dt>
       <dd class="url">quester.jp</dd>
       <dt class="notes">このアプリケーションについて</dt>
-      <dd class="notes"><p>Quitter - Twitterで質問カンタンにが送れるサービス</p></dd>
+      <dd class="notes"><p>Questter - Twitterで質問カンタンにが送れるサービス</p></dd>
       <dt class="terms">プライバシーポリシー</dt>
       <dd class="terms"><p><a href="https://kuizy.net/policy/pvy">プライバシーポリシー</a></p></dd>
       <dt class="terms">利用規約</dt>
