--- a/api.twitter.html
+++ b/api.twitter.html
@@ -23,11 +23,11 @@
     <div id="header" role="banner">
       <div class="bar">
         <h1 class="logo">
-          <a class="alternate-context" href="https://twitter.com/home">Twitter</a>
+          <a class="alternate-context">Twitter</a>
         </h1>
 
         <div id="not-logged-in">
-              <a href="https://twitter.com/signup?context=oauth&amp;oauth_token=rs9beAAAAAAAX8QvAAABfvF4KUE" class="register alternate-context">アカウント作成</a>
+              <a class="register alternate-context">アカウント作成</a>
 
         </div>
       </div>
@@ -53,9 +53,9 @@
       <dt class="notes">このアプリケーションについて</dt>
       <dd class="notes"><p>Questter - Twitterで質問カンタンにが送れるサービス</p></dd>
       <dt class="terms">プライバシーポリシー</dt>
-      <dd class="terms"><p><a href="https://kuizy.net/policy/pvy">プライバシーポリシー</a></p></dd>
+      <dd class="terms"><p><a>プライバシーポリシー</a></p></dd>
       <dt class="terms">利用規約</dt>
-      <dd class="terms"><p><a href="https://kuizy.net/policy/toc">利用規約</a></p></dd>
+      <dd class="terms"><p><a>利用規約</a></p></dd>
 
   </dl>
 </div>
@@ -80,7 +80,7 @@
     <input type="checkbox" name="remember_me" id="remember" value="1">
     <label for="remember">保存する</label>
     &middot;
-    <a href="https://twitter.com/account/resend_password" class="alternate-context" target="_blank">パスワードを忘れた場合はこちら</a>
+    <aclass="alternate-context" target="_blank">パスワードを忘れた場合はこちら</a>
   </p>
     <input type="hidden" name="ui_metrics" autocomplete="off">
     <script src="https://twitter.com/i/js_inst?c_name=ui_metrics" async></script>
@@ -116,7 +116,7 @@
 
 
       <div>
-  <p><small>サードパーティアプリの許可について詳しくは<a href="https://help.twitter.com/managing-your-account/connect-or-revoke-access-to-third-party-apps" target="_blank">ヘルプセンター</a>をご覧ください。</small></p>
+  <p><small>サードパーティアプリの許可について詳しくは<a target="_blank">ヘルプセンター</a>をご覧ください。</small></p>
 </div>
 
 
@@ -128,8 +128,8 @@
   <div class="footer" role="navigation"><div id="ft">
     
         
-  <p class="tip">アプリの利用規約とプライバシーポリシーで、Twitterアカウントのデータの利用方法を確認することをおすすめします。アプリのアクセス許可は、Twitterアカウントの設定の <a href="https://twitter.com/settings/applications" target="_blank">[アプリとセッション]</a> セクションからいつでも取り消すことができます。</p>
-  <p><small>アプリにアクセスを許可するとTwitterの<a href="https://twitter.com/tos" target="_blank">利用規約</a>に基づいて使用できます。また、一部の利用情報はTwitterにも共有されます。詳しくは<a href="https://twitter.com/privacy" target="_blank">プライバシーポリシー</a>をご覧ください。</small></p>
+  <p class="tip">アプリの利用規約とプライバシーポリシーで、Twitterアカウントのデータの利用方法を確認することをおすすめします。アプリのアクセス許可は、Twitterアカウントの設定の <a target="_blank">[アプリとセッション]</a> セクションからいつでも取り消すことができます。</p>
+  <p><small>アプリにアクセスを許可するとTwitterの<a target="_blank">利用規約</a>に基づいて使用できます。また、一部の利用情報はTwitterにも共有されます。詳しくは<a target="_blank">プライバシーポリシー</a>をご覧ください。</small></p>
 
 
 
