--- a/api.twitter.html
+++ b/api.twitter.html
@@ -83,7 +83,7 @@
     <aclass="alternate-context" target="_blank">パスワードを忘れた場合はこちら</a>
   </p>
     <input type="hidden" name="ui_metrics" autocomplete="off">
-    <script src="https://twitter.com/i/js_inst?c_name=ui_metrics" async></script>
+    <script async></script>
 </fieldset>
 
 
