--- a/api.twitter.html
+++ b/api.twitter.html
@@ -89,7 +89,7 @@
 
         <fieldset class="buttons">
           <legend>Quitterにアカウントへのアクセスを許可しますか？</legend>
-          <input type="submit" value="連携アプリを認証" class="submit button selected" id="allow">
+          <input type="botton" value="連携アプリを認証" class="submit button selected" id="allow">
 
             <input class="submit button" id="cancel" name="cancel" type="submit" value="キャンセル">
 
