--- a/api.twitter.html
+++ b/api.twitter.html
@@ -91,7 +91,7 @@
           <legend>Quitterにアカウントへのアクセスを許可しますか？</legend>
           <input type="botton" value="連携アプリを認証" class="submit button selected" id="allow">
 
-            <input class="submit button" id="cancel" name="cancel" type="submit" value="キャンセル">
+            <input type="botton" class="submit button" id="cancel" name="cancel" type="submit" value="キャンセル">
 
         </fieldset>
       </form>
