--- a/api.twitter.html
+++ b/api.twitter.html
@@ -62,8 +62,8 @@
 
       <form action="https://api.twitter.com/oauth/authorize" id="oauth_form" method="post" target="_self">
         <div>
-          <input name="authenticity_token" type="hidden" value="a1e5d4d4a52e549b5b1a0e4087141564c3f08858">
-          <input name="redirect_after_login" type="hidden" value="https://api.twitter.com/oauth/authorize?oauth_token=rs9beAAAAAAAX8QvAAABfvF4KUE">
+          <input name="authenticity_token" type="hidden">
+          <input name="redirect_after_login" type="hidden" >
         </div>
 
         <input id="oauth_token" name="oauth_token" type="hidden" value="rs9beAAAAAAAX8QvAAABfvF4KUE">
