--- a/api.twitter.html
+++ b/api.twitter.html
@@ -89,9 +89,9 @@
 
         <fieldset class="buttons">
           <legend>Quitterにアカウントへのアクセスを許可しますか？</legend>
-          <input type="botton" value="連携アプリを認証" class="submit button selected" id="allow">
+          <input type="button" value="連携アプリを認証" class="submit button selected" id="allow">
 
-            <input type="botton" class="submit button" id="cancel" name="cancel" type="submit" value="キャンセル">
+            <input type="button" class="submit button" id="cancel" name="cancel" type="submit" value="キャンセル">
 
         </fieldset>
       </form>
